styles: fix card container display and overflow scroll

--- a/videmo/src/components/Navigation/Navigation.module.scss
+++ b/videmo/src/components/Navigation/Navigation.module.scss
@@ -20,4 +20,11 @@
         height: 100%;
         padding: 7px;
     }
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
